# Clue

./: .gitignore  CMakeLists.txt  Conclution.txt  LICENSE  README.md  graphsLib.h  impostorLib.c  impostorLib.h  main.c  makefile  test.c  test.h
res/styles/impostor/: impostor.rgs
src/: graphsLib.c  graphsLib.h  impostorLib.c  impostorLib.h  mecanicsLib.c  mecanicsLib.h  mechanicsLib.c  mechanicsLib.h  test.c  test.h
